<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/images"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btnExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button"
        android:gravity="center|center_vertical"
        android:text="@string/exit"
        android:textColor="#000000"
        android:width="180dp" />

    <Button
        android:id="@+id/btnAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnExit"
        android:layout_alignLeft="@+id/btnExit"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button"
        android:gravity="center"
        android:text="@string/about"
        android:textColor="#000000"
        android:width="180dp" />

    <Button
        android:id="@+id/btnScores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnAbout"
        android:layout_alignLeft="@+id/btnAbout"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button"
        android:gravity="center"
        android:text="@string/scores"
        android:textColor="#000000"
        android:width="180dp" />

    <Button
        android:id="@+id/btnNewGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnScores"
        android:layout_alignLeft="@+id/btnScores"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button"
        android:gravity="center"
        android:text="@string/new_game"
        android:textColor="#000000"
        android:width="180dp" />

    <TextView
        android:id="@+id/txtEquipos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="51dp"
        android:text="@string/title"
        android:textColor="#D3D3D3"
        android:textSize="38sp"
        android:textStyle="bold"
        android:typeface="serif" />

</RelativeLayout>
