<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/images"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Insertar" >

    <TextView
        android:id="@+id/txtEquipos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:shadowColor="#778899"
        android:text="@string/title"
        android:textColor="#D3D3D3"
        android:textSize="38sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <Button
        android:id="@+id/btnInsertar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/txtEquipos"
        android:background="@drawable/button"
        android:text="@string/insert"
        android:textColor="#000000"
        android:width="150dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/marcador_blanco"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold"
            android:typeface="serif" />

        <EditText
            android:id="@+id/txtIntroducir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" 
            android:textColor="#000000">

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scores"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold"
            android:typeface="serif" />

        <EditText
            android:id="@+id/txtTiempo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/difficulty"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold"
            android:typeface="serif" />

        <EditText
            android:id="@+id/txtDificultad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="#000000" />
    </LinearLayout>

</RelativeLayout>